--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,20 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 20px;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    /* background: #f7f4ed; */
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #d7d7d7;
+    border-radius: 100vh;
+    border: 3px solid #ffffff;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities {
+  .scrollbar-no::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    display: none;
+  }
+
+  .scrollbar-no::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    display: none;
+    /* background: #f7f4ed; */
+  }
+
+  .scrollbar-no::-webkit-scrollbar-thumb {
+    background: #d7d7d7;
+    border-radius: 100vh;
+    border: 3px solid #ffffff;
+    display: none;
+  }
+
+  .scrollbar-no::-webkit-scrollbar-thumb:hover {
+    background: #ffffff;
+    display: none;
+  }
 }
